<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:id="@+id/AboutUs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AboutusText"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:paddingLeft="@dimen/padingAbout"
            android:paddingRight="@dimen/padingAbout"
            android:text="@string/Aboutus"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/NameTextSize" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:lineSpacingExtra="@dimen/spacing"
            android:text="@string/txt" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_margin_about"
            android:text="@string/btn_sec_fra" />
    </LinearLayout>
</FrameLayout>
</layout>