<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="obj"
            type="com.example.myfirstproject.ProjectViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/size"
            android:layout_width="@dimen/WidthSize"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/size"
            android:inputType="number"
            android:text="@={obj.data.size+``}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.202" />
<!--            android:text="@={obj.shoesize+``}"-->
<!--        android:text="@={obj.data.size+``}"-->
<!--        android:text="@={obj.size+``}"-->
        <EditText
            android:id="@+id/shoename"
            android:layout_width="@dimen/widthShoename"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Shoe Name"
            android:inputType="textPersonName"
            android:text="@={obj.data.shoename}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039" />


        <EditText
            android:id="@+id/Company"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Company"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406"
            android:text="@={obj.data.company}"
            />
<!--            android:text="@={obj.shoecompany}"-->

<!--            android:text="@={obj.data.company}"-->

<!--           -->


        <EditText
            android:id="@+id/color"
            android:layout_width="@dimen/widthColor"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/colorshoe"
            android:inputType="textPersonName"

            android:text="@={obj.data.color}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.546" />
<!--            android:text="@={obj.shoecolor}"-->

        <!--               android:text="@{obj.data.color}"     -->


        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/Savebutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>